--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -854,6 +854,7 @@ resident threads has a corresponding reduction on maximum performance.
 
 
 \subsection{Loop recovery}
+\label{sec:loop_recovery}
 
 Loop unrolling or loop unwinding is a loop transformation technique that
 attempts to optimise a program's execution speed by reducing or eliminating
