--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -1787,7 +1787,7 @@ f x = let a = lift (constant 30, x)
 % lower-level code generation optimisations in a backend.
 
 
-\section{Related Work}
+\section{Related work}
 \label{sec:fusion_related_work}
 
 The desire to program in a functional style while still achieving the
