--- a/sections/07-conclusion.tex
+++ b/sections/07-conclusion.tex
@@ -175,6 +175,10 @@ achieving high performance.
 
 \section{Related work}
 
+Previous chapters have already covered related work of special relevance to the
+topics presented in their respective chapters. I refer readers to those
+chapters, and simply make some general remarks here.
+
 
 \section{Future work}
 
@@ -226,7 +230,7 @@ types of the target language into the Haskell type system. Thus, any errors in
 translating the Accelerate program into CUDA source code will not be detected at
 Haskell compilation time, and will instead raise a runtime error when the
 program is executed. Adding a fully type preserving compiler that translates the
-well-typed Accelerate program into a verifiable target code is left for future
+well-typed Accelerate program into a verifiable target code is important future
 work.
 
 
