sec 3/4: swap epigraphs

--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -2,8 +2,13 @@
 \chapter{Accelerated array code}
 \label{ch:implementation}
 
-\epigraph{The trouble with opportunity is that it always comes disguised as hard work.}%
-{\textsc{---herbert v.\ prochnow}}
+\epigraph{At the beginning of a novel, a writer needs confidence, but after that
+what's required is persistence. These traits sound similar. They aren't.
+Confidence is what politicians, seducers and currency speculators have, but
+persistence is a quality found in termites. It's the blind drive to keep on
+working that persists after confidence breaks down.}%
+{\textsc{---walter kirn}}
+
 
 The previous chapter described the design of the Accelerate language, an
 embedded DSL of operations over arrays, rich enough to express some interesting
