--- a/sections/03-accelerate.tex
+++ b/sections/03-accelerate.tex
@@ -2,12 +2,8 @@
 \chapter{Embedding array computations}
 \label{ch:accelerate}
 
-\epigraph{At the beginning of a novel, a writer needs confidence, but after that
-what's required is persistence. These traits sound similar. They aren't.
-Confidence is what politicians, seducers and currency speculators have, but
-persistence is a quality found in termites. It's the blind drive to keep on
-working that persists after confidence breaks down.}%
-{\textsc{---walter kirn}}
+\epigraph{The trouble with opportunity is that it always comes disguised as hard work.}%
+{\textsc{---herbert v.\ prochnow}}
 
 
 Starting with Fortran, array-based code has played a central role in
